<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:zhy="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <TextView
                android:text="Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textview_add_question_title" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edittext_add_question_title"
                android:hint="> Question title" />

            <TextView
                android:text="Level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textview_add_question_level" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/radio_group_level"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:checkedButton="@+id/radio_level_easy">
                <RadioButton android:id="@+id/radio_level_easy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/level_tag_easy"
                    />
                <RadioButton android:id="@+id/radio_level_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/level_tag_medium"
                    />
                <RadioButton android:id="@+id/radio_level_hard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/level_tag_hard"
                    />
            </RadioGroup>

            <TextView
                android:text="Hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textview_add_question_hint" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/edittext_add_question_hint" />

            <TextView
                android:text="Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textview_add_question_description" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/edittext_add_question_description" />

            <TextView
                android:text="Tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textview_add_question_tags" />

            <com.zhy.view.flowlayout.TagFlowLayout
                android:id="@+id/flowlayout_edit_tag"
                zhy:max_select="-1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">
            </com.zhy.view.flowlayout.TagFlowLayout>

            <TextView
                android:text="Answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textview_add_question_answer" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/edittext_add_question_answer" />

            </LinearLayout>

        </ScrollView>

</LinearLayout>