<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:zhy="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_add_question"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">


        <ImageButton
            android:id="@+id/toolbar_edit_back_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:scaleType="centerInside"
            android:gravity="left"
            android:layout_marginLeft="5dp"
            android:src="@drawable/ic_back_button"
            android:background="@android:color/transparent"/>

        <TextView
            android:id="@+id/toolbar_edit_question_title"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/menu_title_edit"
            android:textSize="24dp"
            android:textColor="@color/iconPrimary"
            android:layout_gravity="center"/>

        <ImageButton
            android:id="@+id/toolbar_edit_save_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:scaleType="centerInside"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:layout_marginRight="15dp"
            android:src="@drawable/ic_save_button"
            android:background="@android:color/transparent"/>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        >

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <TextView
                android:text="Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:id="@+id/textview_edit_question_title" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edittext_edit_question_title"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/white"/>

            <TextView
                android:text="Level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:id="@+id/textview_edit_question_level" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/edit_question_radio_group_level"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@android:color/white"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_marginTop="5dp"
                >
                <RadioButton android:id="@+id/radio_level_easy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/level_tag_easy"
                    />
                <RadioButton android:id="@+id/radio_level_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/level_tag_medium"
                    />
                <RadioButton android:id="@+id/radio_level_hard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/level_tag_hard"
                    />
            </RadioGroup>

            <TextView
                android:text="Hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:id="@+id/textview_edit_question_hint" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/edittext_edit_question_hint"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/white"/>

            <TextView
                android:text="Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:id="@+id/textview_edit_question_description" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/edittext_edit_question_description"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/white"/>

            <TextView
                android:text="Tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:id="@+id/textview_edit_question_tags" />

            <com.zhy.view.flowlayout.TagFlowLayout
                android:id="@+id/flowlayout_edit_quesiton_tag"
                zhy:max_select="-1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/white">
            </com.zhy.view.flowlayout.TagFlowLayout>


            <TextView
                android:text="Note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:id="@+id/textview_edit_question_note" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/edittext_edit_question_note"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/white"/>


            <TextView
                android:text="Answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:id="@+id/textview_edit_question_answer" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/edittext_edit_question_answer"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/white"/>

        </LinearLayout>

    </ScrollView>



</LinearLayout>